bluec-tests/tests/invalid/types_bool/conflicting_function_types.c
int foo(_Bool a);

int main(void) {
    return 0;
}

int foo(char a);